--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -21,6 +21,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'f126a734-1a58-4d79-9b0a-ba8a0527e885',
+        'redirect_uri': 'https://umakk.github.io/smart-on-fhir-tutorial/example-smart-app/',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
