--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -39,7 +39,7 @@
         // To keep things flexible, let's construct the launch URL by taking the base of the 
         // current URL and replace "launch.html" with "index.html".
         var launchUri = window.location.protocol + "//" + window.location.host + window.location.pathname;
-        var redirectUri = launchUri.replace("launch.html","index.html");
+        var redirectUri = launchUri.replace("launch.html","");
             
             alert("launchUri : " +launchUri);
         alert("redirectUri : " +redirectUri);
