--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -41,9 +41,10 @@
         $.ajax(options).done(function(res){
             // should get back the access token and the patient ID
             var accessToken = res.access_token;
-            var patientId = res.patient;
+            //var patientId = res.patient;
+            var patientId = "1316024";
           
-          alert("patientId : " +patientId);
+            alert("patientId : " +patientId);
                     
             // and now we can use these to construct standard FHIR
             // REST calls to obtain patient resources with the
@@ -51,7 +52,7 @@
             // Let's, for example, grab the patient resource and
             // print the patient name on the screen
             var url = serviceUri + "/Patient/" + patientId;
-          alert("url : " +url);
+            alert("url : " +url);
             $.ajax({
                 url: url,
                 type: "GET",
