--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -6,6 +6,6 @@
         <script src='./src/js/example-smart.js'></script>
     </head>
     <body>
-        Loading...
+        Authenticating..
     </body>
 </html>
