--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -5,6 +5,7 @@
     <script src='./lib/js/jquery.min.js'></script>
   </head>
   <body>
+    Fetching Patient data..
     <script>
         // get the URL parameters received from the authorization server
         var state = getUrlParameter("state");  // session key
