--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -6,6 +6,21 @@
     <script src='./src/js/example-fetch-patient-info.js'></script>
   </head>
   <body>
-    Fetching Patient data..
+    <p id="loading">Fetching Patient data..</p>
+     <h2>Patient Resource</h2>
+      <table>
+        <tr>
+          <th>First Name:</th>
+          <td id='fname'></td>
+        </tr>
+        <tr>
+          <th>Gender:</th>
+          <td id='gender'></td>
+        </tr>
+        <tr>
+          <th>Date of Birth:</th>
+          <td id='birthdate'></td>
+        </tr>
+      </table>
   </body>
 </html>
