--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <p id="loading">Fetching Patient data..</p>
+    <div id="response">
      <h2>Patient Resource</h2>
       <table>
         <tr>
@@ -22,5 +23,6 @@
           <td id='birthdate'></td>
         </tr>
       </table>
+    </div>
   </body>
 </html>
