--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -11,7 +11,7 @@
      <h2>Patient Resource</h2>
       <table>
         <tr>
-          <th>First Name:</th>
+          <th>Name:</th>
           <td id='fname'></td>
         </tr>
         <tr>
